# Habits

./: .gitignore  MANIFEST.in  README.md  auth.py  pyproject.toml  setup.py
app/: __init__.py  main.py  utils.py
app/data/: __init__.py  creature.py  errors.py  explorer.py  habit.py  init_db.py  user.py
app/fake/: creature.py  explorer.py
app/models/: __init__.py  errors.py  explorer.py  habit.py  user.py
app/service/: creature.py  explorer.py  habit.py  user.py
app/test/unit/service/: test_creature.py
app/web/: __init__.py  creature.py  errors.py  explorer.py  habit.py  user.py
models/: __init__.py  creature.py
service/: creature.py  explorer.py
test/: test_auth.py
test/full/: test_full.py
test/unit/data/: habit.py  test_creature.py
test/unit/service/: test_creature.py
web/: __init__.py  creature.py  explorer.py
