[project]
name = "fastapi_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1"]